Make Neo4j 4.3 on JDK 16 happy.